[Chore] : .gitignore 수정

--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,15 @@ out/
 
 ### VS Code ###
 .vscode/
+
+### mac OS ###
+.DS_Store
+.AppleDouble
+.LSOverride
+
+### Project security ###
+**/resources/
+Dockerfile
+docker-compose.yaml
+deploy_*.sh
+app-*.yaml
