[Chore] gitignore  수정
resources 전체 무시 -> database.yml, oauth2.yml만 무시

--- a/.gitignore
+++ b/.gitignore
@@ -42,7 +42,8 @@ out/
 .LSOverride
 
 ### Project security ###
-**/resources/
+/src/main/resources/database/
+/src/main/resources/oauth2/
 Dockerfile
 docker-compose.yaml
 deploy_*.sh
