[Chore] modify gradle.yml

--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -38,8 +38,8 @@ jobs:
         OCCUPY_OAUTH_SECRET: ${{ secrets.OCCUPY_OAUTH_SECRET }}
 
         OCCUPY_SECRET_DIR: ./src/main/resources
-        OCCUPY_DB_SECRET_DIR: $OCCUPY_SECRET_DIR/database
-        OCCUPY_OAUTH_SECRET_DIR: $OCCUPY_SECRET_DIR/oauth2
+        OCCUPY_DB_SECRET_DIR: ./src/main/resources/database
+        OCCUPY_OAUTH_SECRET_DIR: ./src/main/resources/oauth2
 
         OCCUPY_SECRET_DIR_FILE_NAME: application.yml
         OCCUPY_DB_SECRET_DIR_FILE_NAME: application-database.yml
@@ -52,9 +52,6 @@ jobs:
         echo "$OCCUPY_SECRET" > $OCCUPY_SECRET_DIR/$OCCUPY_SECRET_DIR_FILE_NAME
         echo "$OCCUPY_DB_SECRET" > $OCCUPY_DB_SECRET_DIR/$OCCUPY_DB_SECRET_DIR_FILE_NAME
         echo "$OCCUPY_OAUTH_SECRET" > $OCCUPY_OAUTH_SECRET_DIR/$OCCUPY_OAUTH_SECRET_DIR_FILE_NAME
-        
-          echo $OCCUPY_DB_SECRET | base64 --decode > $OCCUPY_DB_SECRET_DIR/$OCCUPY_DB_SECRET_DIR_FILE_NAME &&
-          echo $OCCUPY_OAUTH_SECRET | base64 --decode > $OCCUPY_OAUTH_SECRET_DIR/$OCCUPY_OAUTH_SECRET_DIR_FILE_NAME
         
 
     - name: Run chmod to make gradlew executable
