[Chore] modify gradle.yml

--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -37,14 +37,17 @@ jobs:
         OCCUPY_DB_SECRET: ${{ secrets.OCCUPY_DB_SECRET }}
         OCCUPY_OAUTH_SECRET: ${{ secrets.OCCUPY_OAUTH_SECRET }}
 
-        OCCUPY_SECRET_DIR: src/main/resources
-        OCCUPY_DB_SECRET_DIR: src/main/resources/database
-        OCCUPY_OAUTH_SECRET_DIR: src/main/resources/oauth2
+        OCCUPY_SECRET_DIR: ./src/main/resources
+        OCCUPY_DB_SECRET_DIR: ./src/main/resources/database
+        OCCUPY_OAUTH_SECRET_DIR: ./src/main/resources/oauth2
 
         OCCUPY_SECRET_DIR_FILE_NAME: application.yml
         OCCUPY_DB_SECRET_DIR_FILE_NAME: application-database.yml
         OCCUPY_OAUTH_SECRET_DIR_FILE_NAME: application-oauth2.yml
       run: |
+        mkdir $OCCUPY_DB_SECRET_DIR
+        mkdir $OCCUPY_OAUTH_SECRET_DIR
+        
         touch $OCCUPY_SECRET_DIR/$OCCUPY_SECRET_DIR_FILE_NAME
         touch $OCCUPY_DB_SECRET_DIR/$OCCUPY_DB_SECRET_DIR_FILE_NAME
         touch $OCCUPY_OAUTH_SECRET_DIR/$OCCUPY_OAUTH_SECRET_DIR_FILE_NAME
