--- a/.gitignore
+++ b/.gitignore
@@ -42,8 +42,9 @@ out/
 .LSOverride
 
 ### Project security ###
-/src/main/resources/database/
-/src/main/resources/oauth2/
+**/resources/application.yml
+**/resources/database/
+**/resources/oauth2/
 Dockerfile
 docker-compose.yaml
 deploy_*.sh
