--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -81,25 +81,26 @@ jobs:
     name: CD with SSH
     needs: build
     runs-on: ubuntu-22.04
+
     steps:
-      # (6) AWS 인증 (IAM 사용자 Access Key, Secret Key 활용)
-    - name: Configure AWS credentials
-      uses: aws-actions/configure-aws-credentials@v1
-      with:
-        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        aws-region: ${{ env.AWS_REGION }}
-
-    # (7) 빌드 결과물을 S3 버킷에 업로드
-    - name: Upload to AWS S3
-      run: |
-        aws deploy push \
-          --application-name ${{ env.CODE_DEPLOY_APPLICATION_NAME }} \
-          --ignore-hidden-files \
-          --s3-location s3://$S3_BUCKET_NAME/$GITHUB_SHA.zip \
-          --source .
-
-    # (8) S3 버킷에 있는 파일을 대상으로 CodeDeploy 실행
+#      # (6) AWS 인증 (IAM 사용자 Access Key, Secret Key 활용)
+#    - name: Configure AWS credentials
+#      uses: aws-actions/configure-aws-credentials@v1
+#      with:
+#        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+#        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+#        aws-region: ${{ env.AWS_REGION }}
+#
+#    # (7) 빌드 결과물을 S3 버킷에 업로드
+#    - name: Upload to AWS S3
+#      run: |
+#        aws deploy push \
+#          --application-name ${{ env.CODE_DEPLOY_APPLICATION_NAME }} \
+#          --ignore-hidden-files \
+#          --s3-location s3://$S3_BUCKET_NAME/$GITHUB_SHA.zip \
+#          --source .
+#
+#    # (8) S3 버킷에 있는 파일을 대상으로 CodeDeploy 실행
 #    - name: Deploy to AWS EC2 from S3
 #      run: |
 #        aws deploy create-deployment \
