[Chore] Discord log back Discord와 연동해 서버 오류가 발생하면 바로 discord에서 확인할 수 있는 기능을 추가했습니다.

--- a/.gitignore
+++ b/.gitignore
@@ -45,6 +45,7 @@ out/
 **/resources/application.yml
 **/resources/database/
 **/resources/oauth2/
+**/resources/logback.xml
 Dockerfile
 docker-compose.yaml
 deploy_*.sh
