[Feat] 애플 계정 유저 정보 반환 클래스 구현 (#16)

--- a/build.gradle
+++ b/build.gradle
@@ -51,7 +51,8 @@ dependencies {
 	// discord log back
 	implementation 'com.github.napstr:logback-discord-appender:1.0.0'
 
-	implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
+	implementation platform("org.springframework.cloud:spring-cloud-dependencies:2022.0.3")
+	implementation "org.springframework.cloud:spring-cloud-starter-openfeign"
 }
 
 tasks.named('test') {
