--- a/.gitignore
+++ b/.gitignore
@@ -45,7 +45,7 @@ out/
 **/resources/application.yml
 **/resources/database/
 **/resources/oauth2/
-**/resources/logback.xml
+**/resources/**/logback.xml
 Dockerfile
 docker-compose.yaml
 deploy_*.sh
