--- a/src/main/resources/swagger/application-springdoc.yml
+++ b/src/main/resources/swagger/application-springdoc.yml
@@ -2,7 +2,7 @@ springdoc:
   default-consumes-media-type: application/json;charset=UTF-8
   default-produces-media-type: application/json;charset=UTF-8
   swagger-ui:
-    path: swagger
+    # path: swagger
     disable-swagger-default-url: true
     display-request-duration: true
     operations-sorter: method
