[Fix] : Swagger 정상황

--- a/.gitignore
+++ b/.gitignore
@@ -46,6 +46,10 @@ out/
 **/resources/database/
 **/resources/oauth2/
 **/resources/logback.xml
+**/applicatioin.yml
+**/application-database.yml
+**/application-oauth2.yml
+**/logback.yml
 Dockerfile
 docker-compose.yaml
 deploy_*.sh
