--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -104,13 +104,12 @@ jobs:
           aws-region: ${{ env.AWS_REGION }}
       
       # (7) 빌드 결과물을 S3 버킷에 업로드
-      - name: Upload to AWS S3
-        run: |
-          aws deploy push \
-          --application-name ${{ env.CODE_DEPLOY_APPLICATION_NAME }} \
-          --ignore-hidden-files \
-          --s3-location s3://$S3_BUCKET_NAME/$GITHUB_SHA.zip \
-          --source .
+#      - name: Upload to AWS S3
+ #       run: |
+ #         aws deploy push \
+  #        --application-name ${{ env.CODE_DEPLOY_APPLICATION_NAME }} \
+   #      --s3-location s3://$S3_BUCKET_NAME/$GITHUB_SHA.zip \
+    #      --source .
       
       #    # (8) S3 버킷에 있는 파일을 대상으로 CodeDeploy 실행
       #    - name: Deploy to AWS EC2 from S3
