--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -88,6 +88,14 @@ jobs:
           path: |
             build/libs/*.jar
 
+      - uses: appleboy/scp-action@master
+        with:
+          key: ${{ secrets.EC2_KEY }}
+          host: ${{ secrets.EC2_HOST }}
+          username: ${{ secrets.EC2_USER }}
+          source: .
+          target: "/home/ubuntu/app/code"
+
 
   deploy:
     name: CD with SSH
