--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -88,7 +88,19 @@ jobs:
           path: |
             build/libs/*.jar
 
-      - uses: appleboy/scp-action@master
+      - name: Remove past EC2 raw sorce dir
+        uses: appleboy/ssh-action@master
+        with:
+          key: ${{ secrets.EC2_KEY }}
+          host: ${{ secrets.EC2_HOST }}
+          username: ${{ secrets.EC2_USER }}
+          # 기존 실행 중인 서버 종료 후 jar 파일 실행
+          script: |
+            sudo rm -rf /home/ubuntu/app/code
+
+      
+      - name: Upload raw sorce to EC2
+        uses: appleboy/scp-action@master
         with:
           key: ${{ secrets.EC2_KEY }}
           host: ${{ secrets.EC2_HOST }}
