--- a/build.gradle
+++ b/build.gradle
@@ -30,6 +30,9 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-webflux'
+	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+
+
 	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.2'
 
 	implementation group: 'org.springdoc', name: 'springdoc-openapi-starter-webmvc-ui', version: '2.3.0'
@@ -54,7 +57,14 @@ dependencies {
 
 	implementation platform("org.springframework.cloud:spring-cloud-dependencies:2022.0.3")
 	implementation "org.springframework.cloud:spring-cloud-starter-openfeign"
+
+	if (System.getProperty("os.name") == "Mac OS X" && System.getProperty("os.arch") == "aarch64") {
+		runtimeOnly("io.netty:netty-resolver-dns-native-macos:4.1.94.Final:osx-aarch_64")
+	}
+
 }
+
+
 
 tasks.named('test') {
 	useJUnitPlatform()
