--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -36,7 +36,7 @@ jobs:
       # git ignore한 yml 파일들 github secret에서 복사해 오기
       - name: Copy secret
         env:
-          OCCUPY_SECRET: ${{ secrets.OCCUPY_SECRET }}
+          OCCUPY_SECRET: ${{ secrets.OCCUPY_SECRET_DEV }}
           OCCUPY_LOGBACK_SECRET: ${{ secrets.OCCUPY_LOGBACK_SECRET }}
 
           OCCUPY_SECRET_DIR: ./src/main/resources
@@ -71,9 +71,9 @@ jobs:
       - name: Start redis-server
         uses: appleboy/scp-action@master
         with:
-          key: ${{ secrets.EC2_KEY }}
-          host: ${{ secrets.EC2_HOST }}
-          username: ${{ secrets.EC2_USER }}
+          key: ${{ secrets.EC2_KEY_DEV }}
+          host: ${{ secrets.EC2_HOST_DEV }}
+          username: ${{ secrets.EC2_USER_DEV }}
           target: /home/ubuntu/app/spring_source
           source: .
           command: sudo systemctl start redis-server
@@ -96,9 +96,9 @@ jobs:
       - name: SCP JAR to EC2
         uses: appleboy/scp-action@master
         with:
-          key: ${{ secrets.EC2_KEY }}
-          host: ${{ secrets.EC2_HOST }}
-          username: ${{ secrets.EC2_USER }}
+          key: ${{ secrets.EC2_KEY_DEV }}
+          host: ${{ secrets.EC2_HOST_DEV }}
+          username: ${{ secrets.EC2_USER_DEV }}
           source: "*.jar"
           target: "/home/ubuntu/app"
 
@@ -106,9 +106,9 @@ jobs:
       - name: Deploy SSH
         uses: appleboy/ssh-action@master
         with:
-          key: ${{ secrets.EC2_KEY }}
-          host: ${{ secrets.EC2_HOST }}
-          username: ${{ secrets.EC2_USER }}
+          key: ${{ secrets.EC2_KEY_DEV }}
+          host: ${{ secrets.EC2_HOST_DEV }}
+          username: ${{ secrets.EC2_USER_DEV }}
           # 기존 실행 중인 서버 종료 후 jar 파일 실행
           script: |
             sudo fuser -k -n tcp 8080
