--- a/.github/workflows/gradle-prod.yml
+++ b/.github/workflows/gradle-prod.yml
@@ -114,3 +114,8 @@ jobs:
             sudo fuser -k -n tcp 8080
             sleep 15
             sudo nohup java -jar /home/ubuntu/app/*.jar > ./nohup.out 2>&1 &
+
+      # OSRM 실행
+      - name: Run OSRM server
+        run: cd osrm ; sudo docker run -t -i -p 5000:5000 -v "${PWD}:/data" osrm/osrm-backend osrm-routed --algorithm mld /data/south-korea-latest.osrm
+        shell: bash
