--- a/.github/workflows/gradle-prod.yml
+++ b/.github/workflows/gradle-prod.yml
@@ -117,5 +117,5 @@ jobs:
 
       # OSRM 실행
       - name: Run OSRM server
-        run: cd osrm ; sudo docker run -t -i -p 5000:5000 -v "${PWD}:/data" osrm/osrm-backend osrm-routed --algorithm mld /data/south-korea-latest.osrm
+        run: cd /home/ubuntu/osrm ; sudo docker run -t -i -p 5000:5000 -v "${PWD}:/data" osrm/osrm-backend osrm-routed --algorithm mld /data/south-korea-latest.osrm
         shell: bash
