--- a/.github/workflows/gradle-prod.yml
+++ b/.github/workflows/gradle-prod.yml
@@ -117,6 +117,5 @@ jobs:
 
       # OSRM 실행
       - name: Run OSRM server
-        run: sudo docker run -t -i -p 5000:5000 -v "/home/ubuntu/osrm:/data" osrm/osrm-backend osrm-routed --
-algorithm mld /data/south-korea-latest.osrm
+        run: sudo docker run -t -i -p 5000:5000 -v "/home/ubuntu/osrm:/data" osrm/osrm-backend osrm-routed --algorithm mld /data/south-korea-latest.osrm
         shell: bash
